19 May 2009

* If LANG contains "UTF-8", assume the terminal supports UTF-8, on the grounds
  that anyone who configures it probably wants UTF-8. Not certain if this is
  a perfect idea but let's see if it causes any problems.
* New window option: monitor-content. Searches for a string in a window and if
  it matches, highlight the status line.

18 May 2009

* main-horizontal layout and main-pane-height option to match vertical.
* New window option main-pane-width to set the width of the large left pane with
  main-vertical (was left-vertical) layout. 
* Lots of layout cleanup. manual layout is now manual-vertical.

16 May 2009

* select-layout command and a few default key bindings (M-0, M-1, M-2, M-9) to
  select layouts.
* Recreate server socket on SIGUSR1, per SF feature request 2792533.

14 May 2009

* Keys in status line (p in vi mode, M-y in emacs) to paste the first line
  of the upper paste buffer. Suggested by Dan Colish.
* clear-history command to clear a pane's history.
* Don't force wrapping with \n when asked, let the cursor code figure it out.
  Should fix terminals which use this to detect line breaks.
* Major cleanup and restructuring of build infrastructure. Still separate files
  for GNU and BSD make, but they are now hugely simplified at the expense of
  adding a configure script which must be run before make. Now build and
  install with:

	$ ./configure && make && sudo make install

04 May 2009

* Use ACS line drawing characters for pane separator lines.

30 April 2009

* Support command sequences without a space before the semicolon, for example
  "neww; neww" now works as well as "neww ; neww". "neww;neww" is still an
  error.
* previous-layout command.
* Display the layout name in window lists.
* Merge resize-pane-up and resize-pane-down into resize-pane with -U and -D
  flags.

29 April 2009

* Get rid of compat/vis.* - only one function was used which is easily
  replaced,and less compat code == good.

27 April 2009
